crates/wac-parser/tests/resolution/fail/duplicate-flag.wac
flags f {
    a,
    b,
    c,
    d,
    a,
}